@@ -1,4 +1,5 @@
 77/1.9.7
+Support for new post spoiler tag
 Added low-contrast night theme
 Added Ultra Black theme
 Added higher font scale options
